snapshots/DeepSpeech/native_client/kenlm/lm/interpolate/test__backoff_reunification.hh.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 27,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "lm",
            ),
            start_line: 7,
            end_line: 26,
            kind: Namespace,
            spaces: [
                FuncSpace {
                    name: Some(
                        "interpolate",
                    ),
                    start_line: 8,
                    end_line: 25,
                    kind: Namespace,
                    spaces: [],
                    metrics: CodeMetrics {
                        nargs: Stats {
                            fn_nargs: 0,
                            closure_nargs: 0,
                            fn_nargs_sum: 0,
                            closure_nargs_sum: 0,
                            fn_nargs_min: 0,
                            closure_nargs_min: 0,
                            fn_nargs_max: 0,
                            closure_nargs_max: 0,
                            total_functions: 0,
                            total_closures: 0,
                        },
                        nexits: Stats {
                            exit: 0,
                            exit_sum: 0,
                            total_space_functions: 0,
                            exit_min: 0,
                            exit_max: 0,
                        },
                        cognitive: Stats {
                            structural: 0,
                            structural_sum: 0,
                            structural_min: 0,
                            structural_max: 0,
                            nesting: 0,
                            total_space_functions: 0,
                            boolean_seq: BoolSequence {
                                boolean_op: None,
                            },
                        },
                        cyclomatic: Stats {
                            cyclomatic_sum: 1.000,
                            cyclomatic: 1.000,
                            n: 1,
                            cyclomatic_max: 1.000,
                            cyclomatic_min: 1.000,
                        },
                        halstead: Stats {
                            u_operators: 7,
                            operators: 15,
                            u_operands: 7,
                            operands: 8,
                        },
                        loc: Stats {
                            sloc: Sloc {
                                start: 7,
                                end: 24,
                                unit: fal,
                                sloc_min: 18,
                                sloc_max: 18,
                            },
                            ploc: Ploc {
                                lines: {
                                    24,
                                    21,
                                    7,
                                    23,
                                    22,
                                },
                                ploc_min: 5,
                                ploc_max: 5,
                            },
                            cloc: Cloc {
                                only_comment_lines: 12,
                                code_comment_lines: 0,
                                comment_line_end: Some(
                                    20,
                                ),
                                cloc_min: 12,
                                cloc_max: 12,
                            },
                            lloc: Lloc {
                                logical_lines: 1,
                                lloc_min: 1,
                                lloc_max: 1,
                            },
                            space_count: 1,
                            blank_min: 1,
                            blank_max: 1,
                        },
                        nom: Stats {
                            functions: 0,
                            closures: 0,
                            functions_sum: 0,
                            closures_sum: 0,
                            functions_min: 0,
                            functions_max: 0,
                            closures_min: 0,
                            closures_max: 0,
                            space_count: 1,
                        },
                        mi: Stats {
                            halstead_length: 23.000,
                            halstead_vocabulary: 14.000,
                            halstead_volume: 87.569,
                            cyclomatic: 1.000,
                            sloc: 18.000,
                            comments_percentage: 0.667,
                        },
                        abc: Stats {
                            assignments: 0.000,
                            assignments_sum: 0.000,
                            assignments_min: 0.000,
                            assignments_max: 0.000,
                            branches: 0.000,
                            branches_sum: 0.000,
                            branches_min: 0.000,
                            branches_max: 0.000,
                            conditions: 0.000,
                            conditions_sum: 0.000,
                            conditions_min: 0.000,
                            conditions_max: 0.000,
                            space_count: 1,
                            declaration: [],
                        },
                        wmc: Stats {
                            cyclomatic: 0.000,
                            class_wmc: 0.000,
                            interface_wmc: 0.000,
                            class_wmc_sum: 0.000,
                            interface_wmc_sum: 0.000,
                            space_kind: Unknown,
                        },
                        npm: Stats {
                            class_npm: 0,
                            interface_npm: 0,
                            class_nm: 0,
                            interface_nm: 0,
                            class_npm_sum: 0,
                            interface_npm_sum: 0,
                            class_nm_sum: 0,
                            interface_nm_sum: 0,
                            is_class_space: fal,
                        },
                        npa: Stats {
                            class_npa: 0,
                            interface_npa: 0,
                            class_na: 0,
                            interface_na: 0,
                            class_npa_sum: 0,
                            interface_npa_sum: 0,
                            class_na_sum: 0,
                            interface_na_sum: 0,
                            is_class_space: fal,
                        },
                    },
                },
            ],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 0,
                    closure_nargs: 0,
                    fn_nargs_sum: 0,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 0,
                    closure_nargs_min: 0,
                    fn_nargs_max: 0,
                    closure_nargs_max: 0,
                    total_functions: 0,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 0,
                    exit_sum: 0,
                    total_space_functions: 0,
                    exit_min: 0,
                    exit_max: 0,
                },
                cognitive: Stats {
                    structural: 0,
                    structural_sum: 0,
                    structural_min: 0,
                    structural_max: 0,
                    nesting: 0,
                    total_space_functions: 0,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 2.000,
                    cyclomatic: 1.000,
                    n: 2,
                    cyclomatic_max: 1.000,
                    cyclomatic_min: 1.000,
                },
                halstead: Stats {
                    u_operators: 7,
                    operators: 16,
                    u_operands: 8,
                    operands: 9,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 6,
                        end: 25,
                        unit: fal,
                        sloc_min: 18,
                        sloc_max: 18,
                    },
                    ploc: Ploc {
                        lines: {
                            24,
                            21,
                            7,
                            23,
                            25,
                            6,
                            22,
                        },
                        ploc_min: 5,
                        ploc_max: 5,
                    },
                    cloc: Cloc {
                        only_comment_lines: 12,
                        code_comment_lines: 0,
                        comment_line_end: None,
                        cloc_min: 12,
                        cloc_max: 12,
                    },
                    lloc: Lloc {
                        logical_lines: 1,
                        lloc_min: 1,
                        lloc_max: 1,
                    },
                    space_count: 2,
                    blank_min: 1,
                    blank_max: 1,
                },
                nom: Stats {
                    functions: 0,
                    closures: 0,
                    functions_sum: 0,
                    closures_sum: 0,
                    functions_min: 0,
                    functions_max: 0,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 2,
                },
                mi: Stats {
                    halstead_length: 25.000,
                    halstead_vocabulary: 15.000,
                    halstead_volume: 97.672,
                    cyclomatic: 2.000,
                    sloc: 20.000,
                    comments_percentage: 0.600,
                },
                abc: Stats {
                    assignments: 0.000,
                    assignments_sum: 0.000,
                    assignments_min: 0.000,
                    assignments_max: 0.000,
                    branches: 0.000,
                    branches_sum: 0.000,
                    branches_min: 0.000,
                    branches_max: 0.000,
                    conditions: 0.000,
                    conditions_sum: 0.000,
                    conditions_min: 0.000,
                    conditions_max: 0.000,
                    space_count: 2,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.000,
                    class_wmc: 0.000,
                    interface_wmc: 0.000,
                    class_wmc_sum: 0.000,
                    interface_wmc_sum: 0.000,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: fal,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: fal,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 0,
            total_space_functions: 0,
            exit_min: 0,
            exit_max: 0,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 0,
            structural_min: 0,
            structural_max: 0,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 3.000,
            cyclomatic: 1.000,
            n: 3,
            cyclomatic_max: 1.000,
            cyclomatic_min: 1.000,
        },
        halstead: Stats {
            u_operators: 7,
            operators: 16,
            u_operands: 11,
            operands: 13,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 27,
                unit: tru,
                sloc_min: 20,
                sloc_max: 20,
            },
            ploc: Ploc {
                lines: {
                    0,
                    22,
                    26,
                    7,
                    4,
                    1,
                    23,
                    24,
                    21,
                    25,
                    6,
                    3,
                },
                ploc_min: 7,
                ploc_max: 7,
            },
            cloc: Cloc {
                only_comment_lines: 12,
                code_comment_lines: 0,
                comment_line_end: None,
                cloc_min: 12,
                cloc_max: 12,
            },
            lloc: Lloc {
                logical_lines: 1,
                lloc_min: 1,
                lloc_max: 1,
            },
            space_count: 3,
            blank_min: 1,
            blank_max: 1,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 3,
        },
        mi: Stats {
            halstead_length: 29.000,
            halstead_vocabulary: 18.000,
            halstead_volume: 120.928,
            cyclomatic: 3.000,
            sloc: 27.000,
            comments_percentage: 0.444,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 3,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
