snapshots/DeepSpeech/native_client/kenlm/lm/interpolate/test__streaming_example_main.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 195,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "main",
            ),
            start_line: 30,
            end_line: 195,
            kind: Function,
            spaces: [],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 2,
                    closure_nargs: 0,
                    fn_nargs_sum: 2,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 2,
                    closure_nargs_min: 0,
                    fn_nargs_max: 2,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 3,
                    exit_sum: 3,
                    total_space_functions: 1,
                    exit_min: 3,
                    exit_max: 3,
                },
                cognitive: Stats {
                    structural: 6,
                    structural_sum: 6,
                    structural_min: 6,
                    structural_max: 6,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 7.000,
                    cyclomatic: 7.000,
                    n: 1,
                    cyclomatic_max: 7.000,
                    cyclomatic_min: 7.000,
                },
                halstead: Stats {
                    u_operators: 24,
                    operators: 338,
                    u_operands: 91,
                    operands: 233,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 29,
                        end: 194,
                        unit: fal,
                        sloc_min: 166,
                        sloc_max: 166,
                    },
                    ploc: Ploc {
                        lines: {
                            128,
                            189,
                            55,
                            116,
                            49,
                            110,
                            43,
                            104,
                            37,
                            98,
                            183,
                            92,
                            129,
                            62,
                            190,
                            56,
                            117,
                            50,
                            111,
                            178,
                            184,
                            38,
                            99,
                            32,
                            87,
                            81,
                            130,
                            63,
                            191,
                            57,
                            118,
                            51,
                            112,
                            45,
                            106,
                            39,
                            100,
                            33,
                            94,
                            173,
                            88,
                            179,
                            143,
                            58,
                            52,
                            113,
                            46,
                            107,
                            174,
                            34,
                            95,
                            89,
                            65,
                            193,
                            59,
                            47,
                            41,
                            29,
                            90,
                            133,
                            194,
                            127,
                            60,
                            115,
                            48,
                            42,
                            36,
                            97,
                            30,
                            91,
                        },
                        ploc_min: 70,
                        ploc_max: 70,
                    },
                    cloc: Cloc {
                        only_comment_lines: 74,
                        code_comment_lines: 0,
                        comment_line_end: Some(
                            188,
                        ),
                        cloc_min: 74,
                        cloc_max: 74,
                    },
                    lloc: Lloc {
                        logical_lines: 48,
                        lloc_min: 48,
                        lloc_max: 48,
                    },
                    space_count: 1,
                    blank_min: 22,
                    blank_max: 22,
                },
                nom: Stats {
                    functions: 1,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 1,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 1,
                },
                mi: Stats {
                    halstead_length: 571.000,
                    halstead_vocabulary: 115.000,
                    halstead_volume: 3908.775,
                    cyclomatic: 7.000,
                    sloc: 166.000,
                    comments_percentage: 0.446,
                },
                abc: Stats {
                    assignments: 0.000,
                    assignments_sum: 0.000,
                    assignments_min: 0.000,
                    assignments_max: 0.000,
                    branches: 0.000,
                    branches_sum: 0.000,
                    branches_min: 0.000,
                    branches_max: 0.000,
                    conditions: 0.000,
                    conditions_sum: 0.000,
                    conditions_min: 0.000,
                    conditions_max: 0.000,
                    space_count: 1,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.000,
                    class_wmc: 0.000,
                    interface_wmc: 0.000,
                    class_wmc_sum: 0.000,
                    interface_wmc_sum: 0.000,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: fal,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: fal,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 2,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 2,
            closure_nargs_max: 0,
            total_functions: 1,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 3,
            total_space_functions: 1,
            exit_min: 0,
            exit_max: 3,
        },
        cognitive: Stats {
            structural: 1,
            structural_sum: 7,
            structural_min: 1,
            structural_max: 6,
            nesting: 0,
            total_space_functions: 1,
            boolean_seq: BoolSequence {
                boolean_op: Some(
                    26,
                ),
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 9.000,
            cyclomatic: 2.000,
            n: 2,
            cyclomatic_max: 7.000,
            cyclomatic_min: 2.000,
        },
        halstead: Stats {
            u_operators: 25,
            operators: 341,
            u_operands: 102,
            operands: 244,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 195,
                unit: tru,
                sloc_min: 166,
                sloc_max: 166,
            },
            ploc: Ploc {
                lines: {
                    0,
                    128,
                    189,
                    55,
                    116,
                    49,
                    110,
                    43,
                    104,
                    37,
                    98,
                    183,
                    92,
                    19,
                    1,
                    129,
                    62,
                    190,
                    56,
                    117,
                    50,
                    111,
                    178,
                    184,
                    38,
                    99,
                    32,
                    87,
                    20,
                    81,
                    8,
                    2,
                    130,
                    63,
                    191,
                    57,
                    118,
                    51,
                    112,
                    45,
                    106,
                    39,
                    100,
                    33,
                    94,
                    173,
                    21,
                    88,
                    179,
                    143,
                    9,
                    3,
                    58,
                    52,
                    113,
                    46,
                    107,
                    174,
                    34,
                    95,
                    89,
                    4,
                    65,
                    193,
                    59,
                    47,
                    41,
                    29,
                    90,
                    17,
                    11,
                    5,
                    133,
                    194,
                    127,
                    60,
                    115,
                    48,
                    42,
                    36,
                    97,
                    30,
                    91,
                    18,
                    6,
                },
                ploc_min: 70,
                ploc_max: 70,
            },
            cloc: Cloc {
                only_comment_lines: 84,
                code_comment_lines: 1,
                comment_line_end: Some(
                    28,
                ),
                cloc_min: 74,
                cloc_max: 74,
            },
            lloc: Lloc {
                logical_lines: 48,
                lloc_min: 48,
                lloc_max: 48,
            },
            space_count: 2,
            blank_min: 22,
            blank_max: 22,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 1,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 2,
        },
        mi: Stats {
            halstead_length: 585.000,
            halstead_vocabulary: 127.000,
            halstead_volume: 4088.381,
            cyclomatic: 9.000,
            sloc: 195.000,
            comments_percentage: 0.436,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 2,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
